<resources>
    <string name="app_name">Tourism Based App</string>
    <string name="click_here_to_visit_the_place">Click here to visit the places</string>
    <string name="bhopal_houses_various_educational_and_research_institutions_and_installations_of_national_importance_including_isro_s_master_control_facility_7_bhel_and_ampri_bhopal_is_home_to_the_largest_number_of_institutes_of_national_importance_in_india_namely_iiser_manit_spa_aiims_nliu_iifm_and_iiit_currently_functioning_from_a_temporary_campus_inside_manit">Bhopal houses various educational and research institutions and installations of national importance, including ISRO\'s Master Control Facility,[7] BHEL, and AMPRI. Bhopal is home to the largest number of institutes of National Importance in India, namely IISER, MANIT, SPA, AIIMS, NLIU, IIFM and IIIT (currently functioning from a temporary campus inside MANIT) .</string>
    <string name="todo">TODO</string>
    <string name="timing_to_visit_12_00_to_5_00">Timing to Visit - 12:00 to 5:00</string>
    <string name="best_hotel">Best Hotel</string>
    <string name="bhopal">Bhopal</string>
    <string name="book_now">Book Now</string>
    <string name="jehan_numa_palace_hotel">Jehan Numa Palace Hotel</string>
    <string name="_5_star_hotel_157_shyamla_hills_rd_shymala_hills_bhopal_madhya_pradesh_462013_0755_266_1100">5-star hotel 157, Shyamla Hills Rd, Shymala Hills, Bhopal, Madhya Pradesh 462013•0755 266 1100</string>
    <string name="todo1">TODO</string>
    <string name="_157_shyamla_hills_rd_shymala_hills_bhopal_madhya_pradesh_462013_0755_266_1100">157, Shyamla Hills Rd, Shymala Hills, Bhopal, Madhya Pradesh 462013 0755 266 1100</string>
    <string name="address_and_contact_information">Address and contact information</string>
    <string name="_2_check_out_time_12_00_pm">Check-out time: 12:00 PM</string>
    <string name="_1_check_in_time_3_00_pm">Check-in time: 3:00 PM</string>
    <string name="gwalior">Gwalior</string>
    <string name="gwalior_was_the_winter_capital_of_the_state_of_madhya_bharat_which_later_became_a_part_of_the_larger_state_of_madhya_pradesh_prior_to_indian_independence_on_15_august_1947_gwalior_remained_a_princely_state_of_the_british_raj_with_the_scindia_as_the_local_rulers_high_rocky_hills_surround_the_city_from_all_sides_on_the_north_it_just_forms_the_border_of_the_ganga_yamuna_drainage_basin_the_city_however_is_situated_in_the_valley_between_the_beautiful_hills">Gwalior was the winter capital of the state of Madhya Bharat which later became a part of the larger state of Madhya Pradesh. Prior to Indian independence on 15 August 1947, Gwalior remained a princely state of the British Raj with the Scindia as the local rulers. High rocky hills surround the city from all sides, on the north it just forms the border of the Ganga- Yamuna Drainage Basin. The city however is situated in the valley between the beautiful hills.</string>
    <string name="taj_usha_kiran_palace_gwalior">Taj Usha Kiran Palace, Gwalior</string>
    <string name="jayendraganj_lashkar_gwalior_madhya_pradesh_474009">Jayendraganj, Lashkar, Gwalior, Madhya Pradesh 474009</string>
    <string name="check_out_time_12_00_pm1">Check-out time: 12:00 PM</string>
    <string name="check_in_time_2_00_pm1">Check-in time: 2:00 PM</string>
    <string name="_5_star_hotel_jayendraganj_lashkar_gwalior_madhya_pradesh_474009_0751_244_4000">5-star hotel Jayendraganj, Lashkar, Gwalior, Madhya Pradesh 474009•0751 244 4000</string>
    <string name="indore_has_been_selected_as_one_of_the_100_indian_cities_to_be_developed_as_a_smart_city_under_the_smart_cities_mission_it_also_qualified_the_first_round_of_smart_cities_mission_and_was_selected_as_one_of_the_first_twenty_cities_to_be_developed_as_smart_cities_indore_has_been_part_of_swachh_survekshan_since_its_inception_and_had_ranked_25th_in_2016_it_has_been_ranked_as_india_s_cleanest_city_four_years_in_a_row_as_per_the_swachh_survekshan_for_the_years_2017_2018_2019_and_2020">Indore has been selected as one of the 100 Indian cities to be developed as a smart city under the Smart Cities Mission.It also qualified the first round of Smart Cities Mission and was selected as one of the first twenty cities to be developed as Smart Cities.Indore has been part of Swachh Survekshan since its inception and had ranked 25th in 2016.It has been ranked as India\'s cleanest city four years in a row as per the Swachh Survekshan for the years 2017, 2018, 2019 and 2020.</string>
    <string name="indore">Indore</string>
    <string name="indore_marriott_hotel">Indore Marriott Hotel</string>
    <string name="_5_star_hotel_h_2_scheme_no_54_meghdoot_garden_vijay_nagar_indore_madhya_pradesh_452010_0731_477_7777">5-star hotel H-2, Scheme No 54, Meghdoot Garden, Vijay Nagar, Indore, Madhya Pradesh 452010•0731 477 7777</string>
    <string name="h_2_scheme_no_54_meghdoot_garden_vijay_nagar_indore_madhya_pradesh_452010">H-2, Scheme No 54, Meghdoot Garden, Vijay Nagar, Indore, Madhya Pradesh 452010</string>
    <string name="check_out_time_12_00_pm">Check-out time: 12:00 PM</string>
    <string name="check_in_time_3_00_pm">Check-in time: 3:00 PM</string>
    <string name="mumbai">Mumbai</string>
    <string name="the_taj_mahal_palace">The Taj Mahal Palace</string>
    <string name="the_name_mumbai_is_derived_from_mumb_or_mah_amb_the_name_of_the_patron_goddess_kuladevata_mumbadevi_of_the_native_koli_community_and_meaning_mother_in_the_marathi_language_which_is_the_mother_tongue_of_the_koli_people_and_the_official_language_of_maharashtra_the_koli_people_originated_in_kathiawad_and_central_gujarat_and_according_to_some_sources_they_brought_their_goddess_mumba_with_them_from_kathiawad_gujarat_where_she_is_still_worshipped">The name Mumbai is derived from Mumbā or Mahā-Ambā—the name of the patron goddess (kuladevata) Mumbadevi of the native Koli community and ā\'ī meaning MOTHER in the Marathi language, which is the mother tongue of the Koli people and the official language of Maharashtra.The Koli people originated in Kathiawad and Central Gujarat, and according to some sources they brought their goddess Mumba with them from Kathiawad (Gujarat), where she is still worshipped.</string>
    <string name="check_out_time_12_00_pm2">Check-out time: 12:00 PM</string>
    <string name="apollo_bandar_colaba_mumbai_maharashtra_400001">Apollo Bandar, Colaba, Mumbai, Maharashtra 400001</string>
    <string name="_5_star_hotel_apollo_bandar_colaba_mumbai_maharashtra_400001_022_6665_3366">5-star hotel Apollo Bandar, Colaba, Mumbai, Maharashtra 400001•022 6665 3366</string>
    <string name="check_in_time_2_00_pm">Check-in time: 2:00 PM</string>
    <string name="kolkata">Kolkata</string>
    <string name="kolkata_is_the_seventh_most_populous_city_in_india_with_a_population_of_4_5_million_residents_within_the_city_limits_and_a_population_of_over_14_1_million_residents_in_the_kolkata_metropolitan_area_making_it_the_third_most_populous_metropolitan_area_in_india_the_port_of_kolkata_is_india_s_oldest_operating_port_and_its_sole_major_riverine_port">Kolkata is the seventh-most populous city in India, with a population of 4.5 million residents within the city limits, and a population of over 14.1 million residents in the Kolkata Metropolitan Area, making it the third-most populous metropolitan area in India. The Port of Kolkata is India\'s oldest operating port and its sole major riverine port.</string>
    <string name="the_oberoi_grand">The Oberoi Grand</string>
    <string name="_5_star_hotel_15_jawaharlal_nehru_rd_new_market_area_dharmatala_taltala_kolkata_west_bengal_700013_033_2249_2323">5-star hotel 15, Jawaharlal Nehru Rd, New Market Area, Dharmatala, Taltala, Kolkata, West Bengal 700013•033 2249 2323</string>
    <string name="_15_jawaharlal_nehru_rd_new_market_area_dharmatala_taltala_kolkata_west_bengal_700013">15, Jawaharlal Nehru Rd, New Market Area, Dharmatala, Taltala, Kolkata, West Bengal 700013</string>
    <string name="welcome_to_travel_different_cities">Welcome to Travel Different Cities</string>
</resources>