<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="23dp"
    android:orientation="vertical"
    android:background="#1976D2"
    tools:context=".SeventhActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:text="@string/kolkata"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="282dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/kolkata" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/kolkata_is_the_seventh_most_populous_city_in_india_with_a_population_of_4_5_million_residents_within_the_city_limits_and_a_population_of_over_14_1_million_residents_in_the_kolkata_metropolitan_area_making_it_the_third_most_populous_metropolitan_area_in_india_the_port_of_kolkata_is_india_s_oldest_operating_port_and_its_sole_major_riverine_port"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="23dp"
        android:layout_height="wrap_content"
        android:textColor="#7B1FA2"
        android:textStyle="bold"
        android:text="@string/timing_to_visit_12_00_to_5_00" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:textColor="#388E3C"
        android:textStyle="bold"
        android:text="@string/best_hotel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_weight="0.5"
            android:text="@string/the_oberoi_grand"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg"
            android:onClick="click_btn5"
            android:text="@string/book_now" />
    </LinearLayout>

</LinearLayout>