<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1976D2"
    tools:context=".GwaliorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBC02D"
        android:textAlignment="center"
        android:text="@string/taj_usha_kiran_palace_gwalior"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/ushakiran" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:text="@string/_5_star_hotel_jayendraganj_lashkar_gwalior_madhya_pradesh_474009_0751_244_4000"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_and_contact_information"
        android:layout_margin="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:textColor="#140043"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal" tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:text="@string/jayendraganj_lashkar_gwalior_madhya_pradesh_474009"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:text="@string/check_in_time_2_00_pm"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="23dp"
            android:text="@string/check_out_time_12_00_pm"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>