<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1976D2"
    tools:context=".MumbaiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBC02D"
        android:textAlignment="center"
        android:text="@string/the_taj_mahal_palace"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:contentDescription="@string/todo1"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/mumbaihotel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:text="@string/_5_star_hotel_apollo_bandar_colaba_mumbai_maharashtra_400001_022_6665_3366"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_and_contact_information"
        android:layout_margin="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:textColor="#140043"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal" tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:text="@string/apollo_bandar_colaba_mumbai_maharashtra_400001"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:text="@string/check_in_time_2_00_pm"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="12dp"
            android:text="@string/check_out_time_12_00_pm"
            android:textSize="18sp"
            android:layout_marginStart="12dp" />
    </LinearLayout>


</LinearLayout>