<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1976D2"
    tools:context=".IndoreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBC02D"
        android:textAlignment="center"
        android:text="@string/indore_marriott_hotel"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/marriot" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:text="@string/_5_star_hotel_h_2_scheme_no_54_meghdoot_garden_vijay_nagar_indore_madhya_pradesh_452010_0731_477_7777"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_and_contact_information"
        android:layout_margin="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:textColor="#140043"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal" tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:text="@string/h_2_scheme_no_54_meghdoot_garden_vijay_nagar_indore_madhya_pradesh_452010"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:text="@string/check_in_time_3_00_pm"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="12dp"
            android:text="@string/check_out_time_12_00_pm"
            android:textSize="18sp"
            android:layout_marginStart="12dp" />
    </LinearLayout>


</LinearLayout>